# ranking_client

./: Cargo.toml  README.md  index.html  ranking_client-23b21eb564431139.js  ranking_client-23b21eb564431139_bg.wasm  sw.js
assets/: manifest.json  sw.js
src/: app.rs  main.rs
src/app/: create_ranking.rs  data.rs  download.rs  login.rs  rank.rs  ranking_list.rs  schema.rs  view.rs
