[package]
name = "ranking_client"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.71"


[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
fastrand = "2.0.1"
combinations = "0.1.0"
ehttp = {version = "0.3.1", features = ["streaming"]}
chrono = {version = "0.4.31", features = ["alloc", "std", "clock", "wasmbind", "serde"]}
poll-promise = "0.3.0"
serde_json = "1.0.108"
log = "0.4"
rfd = "0.13.0"
futures = "0.3.30"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
json_minimal = "0.1.3"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
